cdbs (0.4.57) UNRELEASED; urgency=low

  * Have debhelper.mk build-depend on cdbs 0.4.53 or newer for DH v7.
  * Use unversioned build-dependencies when satisfied in oldstable
    (codename "Etch"), except when required by policy (concretely this
    means keep old versioned depenencies for Perl, relax them a bit for
    Python, but drop them for old versions of debhelper, gnulib,
    type-handling, cdbs and patchutils).
  * Adjust gnome.mk to extend build-dependencies after including classes
    which initialize them.
  * Append trunk in Vcs-* stanzas of debian/control, and use viewsvn
    (not vswn) in Vcs-Browser stanza.  Closes: bug#531692.
  * Build-depend on python-all-dev (not python2.4-dev or python2.5-dev),
    and generalize python-distutils tests to try all available versions
    of python.  Closes: bug#525855, thanks to Martin Pitt.
  * Use $(filter ...) instead of $(findstring ...) to extract space-
    separated options from DEB_BUILD_OPTIONS in debian/rules.
  * Fix autotools.mk not completing all dependencies of post-patches
    before doing configure.
  * Fix doc-base ection (Debian, not Programming). Closes: bug#532193,
    thanks to Drew Parsons.
  * Fix testroot rule broken since 0.4.54. Closes: bug#532262, thanks to
    Frédéric Brière.
  * Fix makefile.mk to cleanup before cleanbuilddir (not in parallel).
    Closes: bug#521711, thanks to Raúl Sánchez Siles.

 -- Jonas Smedegaard <dr@jones.dk>  Mon, 27 Apr 2009 17:56:24 +0200

cdbs (0.4.56) unstable; urgency=low

  * Simplify logic in autotools, makefile and debhelper snippets:
    $(if A,A,B) -> $(or A,B).
  * Tighten debhelper.mk build-dependency hint for debhelper.  Closes:
    bug#522613, thanks to Adam D. Barratt and Russ Allbery.
  * Fix python-distutils.mk cleanup clashing with dh_clean (dh_clean
    chokes on dirnames containing trailing "-stamp"):
    + Remove stampdir before clean target
    + Use dirname not ending in "-stamp" (and while at it, use dir below