@@ -13,7 +13,7 @@ Copyright: 2002-2003, Colin Walters <walters@debian.org>
 	2004, David B Harris <dbharris@eelf.ddts.net>
 	2006, Fathi Boudra <fboudra@free.fr>
 	2006, Marc Dequènes (Duck) <Duck@DuckCorp.org>
-	2006-2007 Peter Eisentraut <petere@debian.org>
+	2006-2009 Peter Eisentraut <petere@debian.org>
 	2006, Peter Rockai <me@mornfall.net>
 License: GPL-2+
 
